# feedbot

./: .gitignore  Cargo.toml  README.md  REUSE.toml  deny.toml  justfile
src/: bot_config.rs  cache.rs  config.rs  errors.rs  main.rs
systemd/: feedbot.service  feedbot.timer
