# SPDX-FileCopyrightText: 2023-2025 Ilya Bizyaev <me@ilyabiz.com>

# SPDX-License-Identifier: Apache-2.0

[package]
name = "feedbot"
version = "1.0.0"
authors = ["Ilya Bizyaev <me@ilyabiz.com>"]
license = "Apache-2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
thiserror = "2.0"

clap = { version = "4.5", features = ["derive"] }
log = "0.4"
pretty_env_logger = "0.5"

futures = "0.3"
itertools = "0.14"

figment = { version = "0.10", features = ["env", "json"] }
serde = { version = "1.0", features = ["derive"] }

url = { version = "2", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls-native-roots",
] }
rss = { version = "2.0", default-features = false }

tokio = { version = "1.44", features = ["rt-multi-thread", "macros", "fs"] }
teloxide = { version = "0.13", default-features = false, features = [
    "ctrlc_handler",
    "rustls-native-roots",
] }

[profile.release]
lto = true
# https://doc.rust-lang.org/cargo/reference/profiles.html#codegen-units
codegen-units = 1
# https://doc.rust-lang.org/cargo/reference/profiles.html#debug
debug = "line-tables-only"
